create .env, init brocker package, add last route for userRouter + swag
