# mono-go/docs/swagger.yaml
@@ -458,6 +458,29 @@ paths:
       summary: Update a user
       tags:
       - users
+  /user/winbattle/{id}:
+    get:
+      description: Win a battle
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Win a battle
+      tags:
+      - users
   /users:
     get:
       description: Retrieve all users
